RESOLVED FIXED Bug 91756
Incorrect scroll offset for RTL content after r123067
https://bugs.webkit.org/show_bug.cgi?id=91756
Summary Incorrect scroll offset for RTL content after r123067
Tony Chang
Reported 2012-07-19 09:39:08 PDT
In http://trac.webkit.org/changeset/123067 , we tried to fix the scrollable content area. However, we start scrolled left the width of the scrollbar. This can be seen in the new failing layout tests: fast/block/float/026.html fast/block/float/028.html fast/overflow/unreachable-overflow-rtl-bug.html I'm going to mark those tests as failing for now.
Attachments
A reduced test case (878 bytes, text/html)
2012-07-20 01:32 PDT, Hironori Bono
no flags
Patch v0 (9.71 KB, patch)
2012-07-23 02:40 PDT, Hironori Bono
tony: review+
Patch v0' (for getting layout-test results from EWS bots) (35.40 KB, patch)
2012-07-23 21:50 PDT, Hironori Bono
webkit.review.bot: commit-queue-
Archive of layout-test-results from gce-cr-linux-07 (352.71 KB, application/zip)
2012-07-23 22:35 PDT, WebKit Review Bot
no flags
Patch v1 (added rebaselined results) (69.99 KB, patch)
2012-07-23 22:51 PDT, Hironori Bono
no flags
Hironori Bono
Comment 2 2012-07-20 01:32:17 PDT
Created attachment 153447 [details] A reduced test case Greetings Tony, Apologies for this regression. (This regression is only for Chromium, right?) To investigate this issue on my PC, my r123067 outputs wrong scrollWidth values for several cases. (The attached page is an reduced test case. It shows a couple of div elements and compares their scrollWidth values.) This is caused by a couple of technical issues: changing clientLeft() carelessfully and forgetting removing unnecessary code. I will upload a fix after verifying this fix does not cause any more regressions. Regards, Hironori Bono
Hironori Bono
Comment 3 2012-07-23 02:40:40 PDT
Created attachment 153759 [details] Patch v0 Greetings, To investigate this issue more deeply, my scrollbar changes may move positioned objects (in an RTL element) right up to three times. Moving positioned objects increases the scrollWidth values without changing the scrollLeft values. This makes scroll offsets look incorrect for these tests. Regards, Hironori Bono
Tony Chang
Comment 4 2012-07-23 10:33:13 PDT
Comment on attachment 153759 [details] Patch v0 View in context: https://bugs.webkit.org/attachment.cgi?id=153759&action=review > Source/WebCore/ChangeLog:19 > + Test: scrollbars/rtl/div-absolute.html > + Nit: Can you also list which other tests this will fix (e.g, fast/block/float/026.html, fast/block/float/028.html and fast/overflow/unreachable-overflow-rtl-bug.html)? Also, can you include the image results for one platform that shows the difference in the diff?
Hironori Bono
Comment 5 2012-07-23 21:50:23 PDT
Created attachment 153956 [details] Patch v0' (for getting layout-test results from EWS bots) Greetings Tony, Many thanks for your review and comment. I have added rebaselined results for Windows. (Somehow, my Precise box is not trustworthy for getting rebaselined images and I would like to get Linux results from EWS bots.) Regards, Hironori Bono
WebKit Review Bot
Comment 6 2012-07-23 22:35:24 PDT
Comment on attachment 153956 [details] Patch v0' (for getting layout-test results from EWS bots) Attachment 153956 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13334212 New failing tests: fast/block/float/028.html fast/block/float/026.html
WebKit Review Bot
Comment 7 2012-07-23 22:35:28 PDT
Created attachment 153961 [details] Archive of layout-test-results from gce-cr-linux-07 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-07 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Hironori Bono
Comment 8 2012-07-23 22:51:45 PDT
Created attachment 153965 [details] Patch v1 (added rebaselined results) Greetings, Sorry for uploading changes so often. I have added rebaselined results for Linux retrieved from EWS bots. (New results do not have blanks at the right side of RTL elements.) Regards, Hironori Bono
Tony Chang
Comment 9 2012-07-24 10:34:11 PDT
Comment on attachment 153965 [details] Patch v1 (added rebaselined results) Looks great, thanks!
WebKit Review Bot
Comment 10 2012-07-24 21:52:17 PDT
Comment on attachment 153965 [details] Patch v1 (added rebaselined results) Clearing flags on attachment: 153965 Committed r123572: <http://trac.webkit.org/changeset/123572>
WebKit Review Bot
Comment 11 2012-07-24 21:52:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.